# csc_122_stacks

./: 1_reverse_a_string.cpp  2_next_greater_element.cpp  3_postfix_notation_calculator.cpp  4_baby_lisp.cpp  4_mtg_stack.cpp  5_mtg_stack.cpp  5_text_editor.cpp  6_text_editor.cpp  CMakeLists.txt  README.md  my_stack.hpp
