cmake_minimum_required(VERSION 3.15)

project("Stack Examples")

set (CMAKE_CXX_STANDARD 14)

add_executable(1_reverse_a_string 1_reverse_a_string.cpp)
add_executable(2_next_greater_element 2_next_greater_element.cpp)
add_executable(3_postfix_notation_calculator 3_postfix_notation_calculator.cpp)
add_executable(4_baby_lisp 4_baby_lisp.cpp)
add_executable(5_mtg_stack 5_mtg_stack.cpp)
